<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    style="@style/RelativeItemStyle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tittle"
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_status"
                style="@style/TextStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                style="@style/TaskView"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itm_created"/>

                <TextView
                    android:id="@+id/tv_created_date"
                    style="@style/TextViewRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                style="@style/TaskView"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_registered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itm_registered"/>

                <TextView
                    android:id="@+id/tv_reg_date"
                    style="@style/TextViewRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                style="@style/TaskView"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_resolve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itm_resolve"/>

                <TextView
                    android:id="@+id/tv_resolve_date"
                    style="@style/TextViewRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                style="@style/TaskView"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_responsible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itm_responsible"/>

                <TextView
                    android:id="@+id/tv_resp_organization"
                    style="@style/TextViewRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_note"
                style="@style/TextTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_filename"
                style="@style/RecyclerItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
